--- a/admin/index.html
+++ b/admin/index.html
@@ -263,6 +263,7 @@
     <script src="app/pages/perfil/perfil.controller.js"></script>
     <script src="app/pages/idioma/idioma.controller.js"></script>
     <script src="app/pages/mi-galeria/gallery.controller.js"></script>
+    <script src="app/pages/tienda/tienda.controller.js"></script>
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
