--- a/admin/index.html
+++ b/admin/index.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="bower_components/intro.js/introjs.css" />
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css" />
-
+    <link rel="stylesheet" href="../assets/fonts/halcyon-icons/css/halcyon-icons.min.css">
     <!-- endbower -->
     <!-- endbuild -->
 
