--- a/admin/app/pages/pages-login/pages-login.html
+++ b/admin/app/pages/pages-login/pages-login.html
@@ -3,18 +3,18 @@
   <div class="login-modal">
 
     <div class="branding">
-      <img class="mb" src="assets/images/logo.png" alt="{{empresaNombre}}">
-      <h2 class="brand"><strong>{{empresaNombre}}</strong></h2>
+      <img class="mb" src="../assets/images/logo-dark.png" alt="{{empresaNombre}}">
+      <!-- <h2 class="brand"><strong>{{empresaNombre}}</strong></h2> -->
+    </div>
+    <div id="alertsPlaceholder" style="min-height: 50px">
+      <uib-alert template-url="alert.html" class="alert alert-{{fAlert.type}}"  ng-show="fAlert">
+        <button type="button" class="close" aria-hidden="true" ng-click="fAlert = null" >×</button>
+        <i class="{{fAlert.icono}}"></i>
+        <strong class="text-uppercase">{{fAlert.strStrong}}</strong>
+        <br>{{fAlert.msg}}
+      </uib-alert>
     </div>
     <form>
-      <div id="alertsPlaceholder" ng-show="fAlert" >
-        <uib-alert template-url="alert.html" class="alert alert-{{fAlert.type}}" >
-          <i class="fa fa-warning"></i>
-          <strong class="text-uppercase">{{fAlert.strStrong}}</strong>
-          {{fAlert.msg}}
-          <button type="button" class="close" aria-hidden="true" ng-click="fAlert = null" >×</button>
-        </uib-alert>
-      </div>
 
       <div class="form-group with-addon">
         <span class="input-addon"><i class="icon-user"></i></span>
@@ -31,7 +31,8 @@
           <div class="input-indicator"></div>
         </label> -->
       </div>
-      <button type="submit" class="btn btn-block btn-lg btn-rounded-40" ng-click="btnLoginToSystem();">INGRESAR </button>
+      <!--  -->
+      <button type="submit" class="btn btn-block btn-lg" ng-click="btnLoginToSystem();">INGRESAR </button>
     </form>
 
     <!-- <div class="mt-15 text-center">No estas registrado? <a ui-sref="pages.signup">Crear una cuenta</a></div> -->
