--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 				<div id="trabaja" style="display:none;width:100%;" ng-include="'templates/seccion/trabaja-con-nosotros.html'"></div>
 				<div id="aviso" style="display:none;width:100%;" ng-include="'templates/seccion/aviso-legal.html'"></div>
 				<div id="terminos" style="display:none;width:100%;" ng-include="'templates/seccion/terminos.html'"></div>
+				<div id="preguntas" style="display:none;width:100%;" ng-include="'templates/seccion/preguntas.html'"></div>
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-3">
@@ -119,6 +120,7 @@
 									<li><a href="#trabaja" fancybox>Trabaja con nosotros</a></li>
 									<li><a href="#aviso" fancybox >Aviso Legal</a></li>
 									<li><a href="#terminos" fancybox >Términos y Condiciones</a></li>
+									<li><a href="#preguntas" fancybox >Preguntas frecuentes</a></li>
 
 									<!-- <li><a href="#contacto" ng-click="scrollTo('contacto');$event.preventDefault();">Contacto</a></li> -->
 								</ul>
