--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -72,19 +72,23 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <div class="form-group pull-right" style="position: relative;z-index: 10">
-                <button class="btn btn-success" ng-click='c.btnVolver()'>
-                <i class="fa fa-reply"></i> Volver</button>
+                <button class="btn btn-info" ng-click='c.btnVolver()'>
+                <i class="fa fa-arrow-left"></i> Volver</button>
+                <button class="btn btn-success" ng-click='c.btnSubir()'>
+                <i class="fa fa-arrow-up"></i> Subir Imagenes</button>
+                <button class="btn" ng-click='c.btnSubirImagenesCarpeta()'>
+                <i class="fa fa-arrow-up"></i> Subir Imagenes desde Carpeta</button>
               </div> 
               <div class="form-group" style="position: relative;z-index: 10">
-                <div class="form-group">
-                  <h3 class="heading pl-md">Cliente: {{c.fDataUpload.nombres}} {{c.fDataUpload.apellidos}}</h3>
+                <h3 class="heading">CLIENTE: {{c.fDataUpload.nombres}} {{c.fDataUpload.apellidos}}</h3>
+                <div class="form-group" ng-show="c.uploadBtn">
                   <label class="col-md-12 control-label minotaur-label">Seleccione</label>
                   <div class="form-group col-md-3">
                     <input type="file" nv-file-select="" uploader="uploader" multiple class="filestyle" filestyle="{ buttonText: 'Select file', iconName: 'fa fa-inbox' }" /><br/>
                   </div>
                   <div class="form-group" style="text-align: right;">
-                    <span >Tamaño maximo para Imagenes es de 10Mg</span> <br/>
-                    <span>Tamaño maximo para Videos es de 100Mg</span>
+                    <span >Tamaño maximo para Imagenes es de 10Mb</span> <br/>
+                    <span>Tamaño maximo para Videos es de 100Mb</span>
                   </div>
                   
                   <div class="col-md-12" style="margin-bottom: 40px">
@@ -148,9 +152,41 @@
                         </button>
                     </div>
 
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="row mix-grid">
+                    <div class="gallery" ng-mixitup magnific-popup="{
+                      delegate: 'c.img-preview',
+                      type: 'image',
+                      tLoading: 'Loading image #%curr%...',
+                      mainClass: 'mfp-img-mobile',
+                      gallery: {
+                        enabled: true,
+                        navigateByImgClick: true,
+                        preload: [0,1]
+                      }}" >
+                      <!-- col -->
+                      <div class="col-md-4 col-sm-6 mb-20 mix" ng-class="{'selected': c.image.selected}" ng-repeat="image in c.images">
+                        <div class="img-container">
+                          <img class="img-responsive" ng-src="{{image.src}}" alt="">
+                          <div class="img-details">
+                            <h4>{{image.title}}</h4>
+                            <div class="img-controls"> 
+                              <a href="javascript:;" class="img-link" ng-click="c.btnAnularArchivo(image)">
+                                <i class="fa fa-trash"></i>
+                              </a>
+                              <a class="img-preview" href="{{image.src}}" title="{{image.title}}">
+                                <i class="fa fa-search"></i>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
-                </div>
               </div>
             </div>
           </div>
