--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -104,24 +104,6 @@
                 <div class="img-details-price form-group">
                   <label class="col-sm-12 control-label minotaur-label"><i class="fa fa-money"></i> {{image.precio}} </label>
                 </div>
-                <!-- <div class="img-details">
-                  <h4>{{image.title}}</h4>
-                  <div class="img-controls">
-                    <a href="javascript:;" class="img-select" ng-click="ctrl.selectImage($index)">
-                      <i class="fa fa-circle-o" ng-show="!image.selected"></i>
-                      <i class="fa fa-circle" ng-show="image.selected"></i>
-                    </a>
-                    <a href="javascript:;" class="img-link">
-                      <i class="fa fa-link"></i>
-                    </a>
-                    <a class="img-preview" href="{{image.src}}" title="{{image.title}}">
-                      <i class="fa fa-search"></i>
-                    </a>
-                    <a href="javascript:;" class="img-more">
-                      <i class="fa fa-ellipsis-v"></i>
-                    </a>
-                  </div>
-                </div> -->
               </div>
             </div>
           </div>
@@ -129,7 +111,7 @@
         <button class="pull-right btn btn-input-sm btn-success mt-15" type="button" ng-click="ctrl.btnPagar();">Pagar</button>
       </div>
 
-      <div class="tile p-15" ng-if="ctrl.modoDescarga">
+      <div class="tile p-15" style="min-height: 400px;" ng-if="ctrl.modoDescarga">
         <section class="tile-header pl-0">
           <h1 class="heading">Compra Exitosa</h1>
           <div class="controls">
@@ -145,7 +127,19 @@
             <minotaur-tile-close></minotaur-tile-close>
           </div>
         </section>
-        Encuesta...
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+            <h2 class="text-custom text-center mb-5">Gracias por tu compra!</h2>
+            <h3 class="text-custom text-center text-cyan mt-0">Califica nuestro servicio.</h3>
+            <div class="rating-stars">              
+              <span class="fa fa-star" data-value="1" ></span>
+              <span class="fa fa-star" data-value="2" ></span>
+              <span class="fa fa-star" data-value="3" ></span>
+              <span class="fa fa-star" data-value="4" ></span>
+              <span class="fa fa-star" data-value="5" ></span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- /col -->
