ajuste cambia clave

--- a/admin/app/pages/perfil/perfil.html
+++ b/admin/app/pages/perfil/perfil.html
@@ -79,7 +79,7 @@
                     <button class="pull-right btn btn-success btn-ef btn-ef-3 btn-ef-3c mb-0" ng-if="p.cambiarClave" 
                             ng-click="p.btnGuardarClave(p.fDataPerfil)"><i class="fa fa-arrow-right"></i> Guardar</button>
                     <button class="pull-right btn btn-lightred btn-ef btn-ef-4 btn-ef-4c mr-10 mb-0" ng-if="p.cambiarClave" 
-                            ng-click="btnCancelClave();" style="padding: 6px 25px"><i class="fa fa-arrow-left"></i> Cancelar</button>
+                            ng-click="p.btnCancelClave();" style="padding: 6px 25px"><i class="fa fa-arrow-left"></i> Cancelar</button>
 
                     <h4 ng-if="p.cambiarClave" class="text-info f-14 col-sm-12">Cambiar contraseña</h4>
                     <div ng-if="p.cambiarClave" class="form-group">
