--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -110,7 +110,7 @@
         <button class="pull-right btn btn-input-sm btn-success mt-15" type="button" ng-click="ctrl.btnPagar();">Pagar</button>
       </div>
 
-      <div class="tile p-15" style="min-height: 400px;" ng-if="ctrl.modoDescarga">
+      <div class="tile p-15" style="min-height: 400px;" ng-if="ctrl.modoDescargaCompleta">
         <section class="tile-header pl-0">
           <h1 class="heading">Compra Exitosa</h1>
           <div class="controls">
@@ -131,11 +131,11 @@
             <h2 class="text-custom text-center mb-5">Gracias por tu compra!</h2>
             <h3 class="text-custom text-center text-cyan mt-0">Califica nuestro servicio.</h3>
             <div class="rating-stars">              
-              <span class="fa fa-star" data-value="1" ></span>
-              <span class="fa fa-star" data-value="2" ></span>
-              <span class="fa fa-star" data-value="3" ></span>
-              <span class="fa fa-star" data-value="4" ></span>
-              <span class="fa fa-star" data-value="5" ></span>
+              <span ng-click="ctrl.calificar(5);" >☆</span>
+              <span ng-click="ctrl.calificar(4);">☆</span>
+              <span ng-click="ctrl.calificar(3);">☆</span>
+              <span ng-click="ctrl.calificar(2);">☆</span>
+              <span ng-click="ctrl.calificar(1);">☆</span>
             </div>
           </div>
         </div>
