--- a/admin/app/pages/perfil/perfil.html
+++ b/admin/app/pages/perfil/perfil.html
@@ -101,7 +101,7 @@
                       </div>                      
                     </div>
                   </div>
-                  <!-- <div class="col-sm-4">
+                  <div class="col-sm-4">
                     <h4 class="text-info f-14 col-sm-12">Foto</h4>
                     <div class="text-center" ng-if="!p.fotoCrop">
                       <img ng-src="assets/images/dinamic/clientes/{{p.fDataPerfil.nombre_foto}}" style="width: 100%">
@@ -110,12 +110,12 @@
                     <div class="row" ng-show="p.fotoCrop">
                       <div class="col-md-12">
                         <div class="p-10 bg-white b-a b-solid" style="height:180px">
-                          <img-crop
+                          <!-- <img-crop
                             image="p.image.originalImage"
                             result-image="p.image.croppedImage"
                             result-image-size="160"
                             area-type="{{p.cropType}}"
-                          ></img-crop>
+                          ></img-crop> -->
                         </div>
                       </div>
                       <div class="col-md-12" ng-show="false">
@@ -134,7 +134,7 @@
                       <button class="btn btn-sm btn-success" ng-click="p.subirFoto();">Guardar Foto</button>
                     </div>
                     <button class="btn btn-sm btn-danger mt-10" ng-click="p.eliminarFoto();" ng-show="p.fDataPerfil.nombre_foto != 'sin-imagen.png'">Quitar Foto</button>
-                  </div>  -->
+                  </div> 
                 </div>
               </form>
             </div>
