--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -86,7 +86,7 @@
                 <div class="form-group" ng-show="c.uploadBtn">
                   <label class="col-md-12 control-label minotaur-label">Seleccione</label>
                   <div class="form-group col-md-3">
-                    <input type="file" nv-file-select="" uploader="uploader" multiple class="filestyle" filestyle="{ buttonText: 'Select file', iconName: 'fa fa-inbox' }" /><br/>
+                    <input type="file" nv-file-select="" uploader="uploader" multiple class="filestyle" filestyle="{ buttonText: 'Select file', iconName: 'fa fa-inbox' }" accept="image/jpeg, .jpg, videos/mp4, .mkv, .avi, .dvd, .wmv, .mov"/><br/>
                   </div>
                   <div class="form-group col-md-9" style="text-align: right;">
                     <span >Tamaño maximo para Imagenes es de 10Mb</span> <br/>
@@ -138,7 +138,6 @@
 
                     <div>
                         <div>
-                            Queue progress:
                             <div class="progress" style="">
                                 <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
                             </div>
