--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -36,7 +36,7 @@
             </div>
             <div class="col-md-12 col-sm-12">
               <div ui-grid="c.gridOptions" ui-grid-selection ui-grid-auto-resize ui-grid-pagination class="grid table-responsive clear">
-                  
+
               </div>
             </div>
           </div>
@@ -72,15 +72,15 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <div class="form-group">
-                <h3 class="heading mt-n col-md-6">CLIENTE: {{c.fDataUpload.nombres}} {{c.fDataUpload.apellidos}}</h3>
+                <h4 class="heading mt-n col-md-6">CLIENTE: {{c.fDataUpload.nombres}} {{c.fDataUpload.apellidos}}</h4>
                 <div class="form-group pull-right" style="position: relative;z-index: 10">
-                  <button class="btn btn-info" ng-click='c.btnVolver()'>
-                  <i class="fa fa-arrow-left"></i> Volver</button>
-                  <button class="btn btn-success" ng-click='c.btnSubir()'>
-                  <i class="fa fa-arrow-up"></i> Subir Imagenes</button>
-                  <button class="btn" ng-click='c.btnSubirImagenesCarpeta()'>
-                  <i class="fa fa-arrow-up"></i> Subir Imagenes desde Carpeta</button>
-                </div> 
+                    <button class="btn btn-success" ng-click='c.btnSubir()'>
+                      <i class="halcyon-icon-upload"></i> Subir Fotografias</button>
+                    <button class="btn" ng-click='c.btnSubirImagenesCarpeta()'>
+                      <i class="halcyon-icon-folder-16"></i> Subir Fotografias desde Carpeta</button>
+                    <button class="btn btn-warning" ng-click='c.btnVolver()'>
+                      <i class="halcyon-icon-back"></i> Regresar</button>
+                </div>
               </div>
               <div class="form-group mt-lg" style="position: relative;z-index: 10">
                 <div class="form-group" ng-show="c.uploadBtn">
@@ -89,10 +89,10 @@
                     <input type="file" nv-file-select="" uploader="uploader" multiple class="filestyle" filestyle="{ buttonText: 'Select file', iconName: 'fa fa-inbox' }" accept="image/jpeg, .jpg, videos/mp4, .mkv, .avi, .dvd, .wmv, .mov"/><br/>
                   </div>
                   <div class="form-group col-md-9" style="text-align: right;">
-                    <span >Tamaño maximo para Imagenes es de 10Mb</span> <br/>
+                    <span >Tamaño maximo para Imagenes es de 10MB</span> <br/>
                     <span>Tamaño maximo para Videos es de 100Mb</span>
                   </div>
-                  
+
                   <div class="col-md-12" style="margin-bottom: 40px;background-color: #fbfbf2;padding: 35px 20px;">
 
                     <p>Cantidad de archivos en cola: {{ uploader.queue.length }}</p>
