--- a/admin/app/pages/seccion/seccion.html
+++ b/admin/app/pages/seccion/seccion.html
@@ -65,7 +65,7 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <div class="form-group pull-right" style="position: relative;z-index: 10">
-                <button class="btn btn-warning" ng-click='se.btnVolver()'>Regresar <i class="halcyon-icon-arrow-right"></i></button>
+                <button class="btn btn-warning" ng-click='se.btnVolver()'><i class="halcyon-icon-back"></i> Regresar </button>
               </div>
               <div class="form-group pull-right mr" style="position: relative;z-index: 10">
                 <button class="btn btn-success" ng-click='se.btnNuevaFicha(se.seccion)'>Nuevo</button>
