--- a/index.html
+++ b/index.html
@@ -193,13 +193,12 @@
 
 							<div class="widget widget-social">
 
-								<div class="social-media text-center">
+								<div class="social-media rounded text-center">
 
-									<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-									<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
-									<a class="instagram" href="#"><i class="fa fa-instagram"></i></a>
 									<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
 									<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+									<a class="youtube" href="#"><i class="fa fa-youtube"></i></a>
+									<a class="instagram" href="#"><i class="fa fa-instagram"></i></a>
 
 								</div><!-- social-media -->
 
