--- a/admin/index.html
+++ b/admin/index.html
@@ -260,6 +260,7 @@
     <script src="app/pages/tipobanner/tipobanner.controller.js"></script>
     <script src="app/pages/config/config.controller.js"></script>
     <script src="app/pages/blog/blog.controller.js"></script>
+    <script src="app/pages/descuento/descuento.controller.js"></script>
 
     <script src="app/pages/cliente/cliente.controller.js"></script>
     <script src="app/pages/usuario/usuario.controller.js"></script>
