--- a/admin/app/pages/descuento/descuento.html
+++ b/admin/app/pages/descuento/descuento.html
@@ -11,7 +11,7 @@
       <div class="tile">
         <!-- tile header -->
         <section class="tile-header">
-          <h1 class="heading">Descuento</h1>
+          <h1 class="heading">Configuración de Descuentos</h1>
           <div class="controls">
             <div class="btn-group" uib-dropdown>
               <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
@@ -29,7 +29,7 @@
         <!-- tile body -->
         <section class="tile-body">
           <div class="row">
-            <div class="col-md-12 col-sm-12">
+            <div class="col-md-12 col-sm-12" ng-show="false">
               <div class="form-group pull-right" style="position: relative;z-index: 10">
                 <button class="btn btn-success" ng-click='des.btnNuevo()'>Nuevo</button>
               </div>
