--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -9,7 +9,7 @@
         <section class="tile-header pl-0">
           <h1 class="heading">Seleccionar Productos</h1>
           <div class="controls">
-            <div class="btn-group" uib-dropdown>
+            <!-- <div class="btn-group" uib-dropdown>
               <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
               <ul class="dropdown-menu dropdown-menu-custom" uib-dropdown-menu role="menu">
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-minimize></a></li>
@@ -18,7 +18,7 @@
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-lightbox></a></li>
               </ul>
             </div>
-            <minotaur-tile-close></minotaur-tile-close>
+            <minotaur-tile-close></minotaur-tile-close> -->
           </div>
         </section>
 
@@ -72,16 +72,12 @@
         <section class="tile-header pl-0">
           <h1 class="heading">Resumen</h1>
           <div class="controls">
-            <div class="btn-group" uib-dropdown>
-              <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
-              <ul class="dropdown-menu dropdown-menu-custom" uib-dropdown-menu role="menu">
-                <li role="menuitem"><a href="javascript:;" minotaur-tile-minimize></a></li>
-                <li role="menuitem"><a href="javascript:;"ng-click="ctrl.cargarGaleria();" minotaur-tile-refresh></a></li>
-                <li role="menuitem"><a href="javascript:;" minotaur-tile-fullscreen></a></li>
-                <li role="menuitem"><a href="javascript:;" minotaur-tile-lightbox></a></li>
-              </ul>
+            <div class="form-group pull-right" >
+                <button class="btn btn-warning" style="font-size:14px;color:#fff;" ng-click="ctrl.btnVolver()">
+                  <i class="halcyon-icon-back"></i> Regresar
+                </button>
             </div>
-            <minotaur-tile-close></minotaur-tile-close>
+            <!-- <minotaur-tile-close></minotaur-tile-close> -->
           </div>
         </section>
         <div class="row mix-grid">
@@ -114,7 +110,7 @@
         <section class="tile-header pl-0">
           <h1 class="heading">Compra Exitosa</h1>
           <div class="controls">
-            <div class="btn-group" uib-dropdown>
+            <!-- <div class="btn-group" uib-dropdown>
               <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
               <ul class="dropdown-menu dropdown-menu-custom" uib-dropdown-menu role="menu">
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-minimize></a></li>
@@ -123,7 +119,7 @@
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-lightbox></a></li>
               </ul>
             </div>
-            <minotaur-tile-close></minotaur-tile-close>
+            <minotaur-tile-close></minotaur-tile-close> -->
           </div>
         </section>
         <div class="row">
