cliente, marca de agua

--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -72,7 +72,7 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <div class="form-group">
-                <h4 class="heading mt-n col-md-6">CLIENTE: {{c.fDataUpload.nombres}} {{c.fDataUpload.apellidos}}</h4>
+                <h4 class="heading mt-n col-md-6">CÓDIGO: {{c.fDataUpload.codigo}}</h4>
                 <div class="form-group pull-right" style="position: relative;z-index: 10">
                     <button class="btn btn-success" ng-click='c.btnSubir()'>
                       <i class="halcyon-icon-upload"></i> Subir Fotografias</button>
