--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -129,7 +129,7 @@
                                         <span class="glyphicon glyphicon-ban-circle"></span> Cancelar
                                     </button>
                                     <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
-                                        <span class="glyphicon glyphicon-trash"></span> Emilinar
+                                        <span class="glyphicon glyphicon-trash"></span> Eliminar
                                     </button>
                                 </td>
                             </tr>
