--- a/admin/app/pages/email/email.html
+++ b/admin/app/pages/email/email.html
@@ -29,7 +29,7 @@
         <!-- tile body -->
         <section class="tile-body">
           <div class="row">
-            <div class="col-md-12 col-sm-12" ng-show="false">
+            <div class="col-md-12 col-sm-12">
               <div class="form-group pull-right" style="position: relative;z-index: 10">
                 <button class="btn btn-success" ng-click='em.btnNuevo()'>Nuevo</button>
               </div>
