--- a/admin/app/pages/email/email.html
+++ b/admin/app/pages/email/email.html
@@ -35,7 +35,7 @@
               </div>
             </div>
             <div class="col-md-12 col-sm-12">
-              <div ui-grid="em.gridOptions" ui-grid-edit ui-grid-selection ui-grid-auto-resize ui-grid-pagination class="grid table-responsive clear"></div>
+              <div ui-grid="em.gridOptions" ui-grid-selection ui-grid-auto-resize ui-grid-pagination class="grid table-responsive clear"></div>
             </div>
           </div>
         </section>
