--- a/admin/index.html
+++ b/admin/index.html
@@ -235,6 +235,7 @@
     <script src="assets/plugins/highcharts/js/highcharts.js"></script>
     <script src="assets/plugins/highcharts/js/themes/grid-light.js"></script>
     <script src="assets/plugins/highcharts/js/modules/exporting.js"></script>
+    <script src="assets/plugins/socialshare/angular-socialshare.js"></script>
 
     <!-- <script src="../assets/plugins/alertifyjs/alertify.js"></script> -->
 
